# HS_TASKS

T00PROC/: CMakeLists.txt
T00PROC/codegen/: dec-bot  dec-top  dec.cc  exec-bot  exec-top  genDecode.py  genExecF.py
T00PROC/headers/: core.hh  exec.hh  ram.hh  reg.hh  types.hh  utils.hh
T00PROC/sources/: core-main.cc  core.cc
